# txt2paint

./: 07.txt  CMakeLists.txt  README.md  exercise1.py  main.cpp
